# MATCLI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: GenerateRelease.yml
pow/: CMakeLists.txt  pow.cpp
pow/rc/: version.h
